# sdl_wrapper

./: CMakeLists.txt  README.md  map.cpp
demo/: main.cpp  main_3d.cpp
gui/: frame.h  region.h  widget.h  window.h
src/: font.h  image.cpp  image.h  map_old.h  renderer.cpp  renderer.h  res_manager.h  texture.cpp  texture.h  util.cpp  util.h  window.cpp  window.h
src/gui/: frame.cpp  frame.h  gui_container.cpp  gui_container.h  gui_element.cpp  gui_element.h
